--- a/src/app/layouts/full/header/header.component.html
+++ b/src/app/layouts/full/header/header.component.html
@@ -4,6 +4,6 @@
 </button>
 <mat-menu #profile="matMenu" class="mymegamenu">
 <button mat-menu-item (click)="logout()">
-<mat-icon>exit_to_app</mat-icon>Logout
+<mat-icon>exit_to_app</mat-icon>Déconnexion
 </button>
 </mat-menu>
