--- a/src/app/material-component/manager-event/manager-event.component.html
+++ b/src/app/material-component/manager-event/manager-event.component.html
@@ -8,6 +8,7 @@
 <div class="p-10">
     <button mat-button color="white" (click)="previous()"><mat-icon>navigate_before</mat-icon>Retour</button>
 </div>
+<h3>Liste des événements liés  <span><b>{{nameBinder}}</b></span> / <span><b>{{subject}}</b></span>/ <span><b>{{subSubject}}</b></span></h3>
 <hr>
 <h2>Consultation</h2>
 <div *ngIf="dataSourceConsultation">
