--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -7,8 +7,8 @@
                 <mat-label>Name</mat-label>
                 <input matInput formControlName="name" required>
                 <mat-error *ngIf="signupForm.controls.name.touched && signupForm.controls.name.invalid">
-                    <span *ngIf="signupForm.controls.name.errors.required">This field is mandatory.</span>
-                    <span *ngIf="signupForm.controls.name.errors.pattern">This field is invalid.</span>
+                    <span *ngIf="signupForm.controls.name.errors.required">Ce champ est obligatoire.</span>
+                    <span *ngIf="signupForm.controls.name.errors.pattern">Ce champ est invalid.</span>
                 </mat-error>
             </mat-form-field>
 
@@ -16,8 +16,8 @@
                 <mat-label>Email</mat-label>
                 <input matInput formControlName="email" required>
                 <mat-error *ngIf="signupForm.controls.email.touched && signupForm.controls.email.invalid">
-                    <span *ngIf="signupForm.controls.email.errors.required">This field is mandatory.</span>
-                    <span *ngIf="signupForm.controls.email.errors.pattern">This field is invalid.</span>
+                    <span *ngIf="signupForm.controls.email.errors.required">Ce champ est obligatoire.</span>
+                    <span *ngIf="signupForm.controls.email.errors.pattern">Ce champ est invalid.</span>
                 </mat-error>
             </mat-form-field>
             <br>
@@ -28,7 +28,7 @@
                     <mat-icon>{{password ? 'visibility_off':'visibility'}}</mat-icon>
                 </button>
                 <mat-error *ngIf="signupForm.controls.password.touched && signupForm.controls.password.invalid">
-                    <span *ngIf="signupForm.controls.password.errors.required">This field is mandatory.</span>
+                    <span *ngIf="signupForm.controls.password.errors.required">Ce champ est obligatoire.</span>
                 </mat-error>
             </mat-form-field>
 
@@ -39,10 +39,10 @@
                     <mat-icon>{{confirmPassword ? 'visibility_off':'visibility'}}</mat-icon>
                 </button>
                 <mat-error *ngIf="signupForm.controls.confirmPassword.touched && signupForm.controls.confirmPassword.invalid">
-                    <span *ngIf="signupForm.controls.confirmPassword.errors.required">This field is mandatory.</span>
+                    <span *ngIf="signupForm.controls.confirmPassword.errors.required">Ce champ est obligatoire.</span>
                 </mat-error>
                 <mat-hint *ngIf="validateSubmit() && !(signupForm.controls.confirmPassword.invalid)">
-                    <span>NewPassword & Confirm Password does not match.</span>
+                    <span>Nouveau mot de passe & Confirm Password ne correspond pas.</span>
                 </mat-hint>
             </mat-form-field>
 
